--- a/css/screen.css
+++ b/css/screen.css
@@ -41,7 +41,26 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+}
+
+/* ===== LAYOUT STYLES ===== */
+#mypicture {
+  margin-left: -1.222em;
+  margin-right: -1.222em;
+}
+
+#mypicture figcaption {
+  padding-left: 1.222em;
+  padding-right: 1.222em;
+}
+
 /* ===== MODULAR STYLES ===== */
+#mypicture {
+  display: block;
+}
+
 
 /* ===== STATE STYLES ===== */
 @media screen and (min-width: 545px) {
