--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,7 @@ html {
   line-height: 1.222em;  /* 22px @ 18px = 1.2222 */
   color: #262526;
   background-color: #f3f3f3;
-  font-family: "Calibri", sanserif;
+  font-family: Tahoma, sanserif;
 }
 
 h1 {
@@ -35,9 +35,6 @@ li {
   padding-bottom: 0.611em; /* 11px @ 18px */
 }
 
-li:last-child {
-  padding-bottom: 0;
-}
 
 a {
   text-decoration: none;
@@ -61,20 +58,21 @@ figure {
 #page {
   padding: 1.222em 0.916em; /* 16.5px */
 }
+
 #mypicture {
-  margin-left: -1.222em;
-  margin-right: -1.222em;
+  margin-left: -0.916em;
+  margin-right: -0.916em;
 }
 
 #mypicture figcaption {
-  padding-left: 1.222em;
-  padding-right: 1.222em;
+  padding-left: 0.916em;
+  padding-right: 0.916em;
 }
 
 header {
-  margin: 0 -1.222em;
+  margin: 0 -0.916em;
   margin-top: -1.222em;
-  padding: 1.222em;
+  padding: 0.916em;
   padding-bottom: 0;
 }
 
@@ -83,13 +81,18 @@ header {
   display: block;
 }
 
-h1 a {
-  color: #d7d8da;
-}
-
 header li {
   color: #7f8084;
 }
+
+li:last-child {
+  padding-bottom: 0;
+}
+
+header li:last-child {
+  margin-bottom: 1.22em;;
+}
+
 
 #school {
   font-weight: bold;
@@ -100,16 +103,45 @@ a:hover {
 }
 
 #navbar ul li {
-  display: inline;
-  padding-right: 7%;
+  display: block;
+  padding: 0.916em;
+  margin: -0.916em;
 }
 
-#navbar ul li:last-child {
-  padding-right:0;
+#active {
+  background-color: #d7d8da;
 }
 
+#active a {
+  color: #262526;
+}
 
 /* ===== STATE STYLES ===== */
-@media screen and (min-width: 545px) {
+@media screen and (min-width: 768px) {
+  #page {
+    padding: 0.916em;
+  }
 
+  header {
+    padding-bottom: -1.222em;
+  }
+
+  #mypicture {
+    padding-left: 0.916em;
+    padding-right: 0.916em;
+  }
+
+  #navbar ul {
+    text-align: center;
+  }
+
+  #navbar ul li {
+    display: inline;
+    padding: 1.222em 5%;
+    margin: 0.916em;
+  }
+
+  #active {
+    background-color: #f3f3f3;
+  }
 }
