--- a/css/screen.css
+++ b/css/screen.css
@@ -16,14 +16,15 @@ html {
   line-height: 1.222em;  /* 22px @ 18px = 1.2222 */
   color: #262526;
   background-color: #f3f3f3;
-  font-family: Tahoma, sanserif;
+  font-family: Gotham, sans-serif;
+  font-weight: 100;
 }
 
 h1 {
-  font-size: 1.333em; /*23.994px/18px */
+  font-size: 2em; /*23.994px/18px */
   line-height: 1.333em;  /* 31.984 @ 23.994px */
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 550;
 }
 
 p,
@@ -38,7 +39,7 @@ li {
 
 a {
   text-decoration: none;
-  color: #d7d8da;
+  color: #fff;
 }
 
 img {
@@ -46,7 +47,10 @@ img {
 }
 
 header {
-  background-color: #262526;
+  background: url(../img/headerphoto-5472-50.jpg) #262526;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  text-align: left;
 }
 
 figure {
@@ -73,7 +77,16 @@ header {
   margin: 0 -0.916em;
   margin-top: -1.222em;
   padding: 0.916em;
-  padding-bottom: 0;
+  padding-bottom: 4em;
+}
+
+#navbar ul li {
+  display: inline;
+  float: right;
+  padding: 0.916em;
+  padding-left: 1.832em;
+  margin: -0.458em;
+  font-size: 0.6666em; /* 12px @ 18px */
 }
 
 /* ===== MODULAR STYLES ===== */
@@ -82,7 +95,7 @@ header {
 }
 
 header li {
-  color: #7f8084;
+  color: #f5f5f5;
 }
 
 li:last-child {
@@ -95,29 +108,45 @@ header li:last-child {
 
 
 #school {
-  font-weight: bold;
+  color: #4c4c4c;
 }
 
-a:hover {
-  color: #f3f3f3;
+nav a:hover {
+  color: #000;
+  text-decoration: underline;
+  
 }
 
 #navbar ul li {
-  display: block;
-  padding: 0.916em;
-  margin: -0.916em;
+  text-transform: uppercase;
 }
 
-#active {
-  background-color: #d7d8da;
+.bio {
+  padding-top: 6em;
 }
 
-#active a {
-  color: #262526;
+.summary {
+  margin-bottom: -0.611em;
+}
+
+#scroll {
+  padding-top: 15em;
+  margin-bottom: -6em;
+  font-size: 0.75em;
+  text-align: center;
 }
 
 /* ===== STATE STYLES ===== */
+@media screen and (min-width: 703px) {
+  header {
+    background-size: 100% 100%;
+  }
+}
 @media screen and (min-width: 768px) {
+  header {
+    background-size: 100% auto;
+  }
+  
   #page {
     padding: 0.916em;
   }
