--- a/css/screen.css
+++ b/css/screen.css
@@ -71,6 +71,10 @@ img {
   max-width: 100%;
 }
 
+video {
+  width: 100%;
+}
+
 header {
   background: url(../img/headerphoto1-3284-30.jpg) #262526;
   background-size: cover;
@@ -84,6 +88,10 @@ header li {
 
 figure {
   padding-top: 0.6111em;
+}
+
+figcaption {
+  font-size: 0.666em;
 }
 
 footer {
@@ -136,10 +144,8 @@ h3:first-child {
 /* ===== MODULAR STYLES ===== */
 #mypicture {
   display: block;
-}
-
-#mypicture figcaption {
-  font-size: 0.666em;
+  width: 100%;
+  max-width: 100%;
 }
 
 #school {
@@ -175,6 +181,10 @@ nav a:hover {
 
 .anomaly {
   margin-bottom: -0.3055em;
+}
+
+.poetry figure {
+  width: 100%;
 }
 
 .hobbies h2 {
@@ -355,6 +365,14 @@ header li:last-child {
     padding-top: 0.6111em;
   }
 
+  figure, figcaption {
+    width: 75%;
+  }
+
+  .ui {
+    margin-left: 7em;
+  }
+
   .bio {
     padding-left: 1.832em;
     padding-top: 7em;
@@ -372,7 +390,6 @@ header li:last-child {
   footer {
     padding-left: 3.664em;
   }
-
 }
 
 @media screen and (min-width: 53.3125em) {
@@ -383,10 +400,13 @@ header li:last-child {
 
   }
 
+  figure, figcaption {
+    width: 75%;
+  }
+
   footer {
     text-align: center;
   }
-
 }
 
 @media screen and (min-width: 64em) {
@@ -398,8 +418,16 @@ header li:last-child {
     font-size: 2.444em; /*44px/18px */
   }
 
+  figure, figcaption {
+    width: 75%;
+  }
+
   #navbar ul li {
     font-size: 0.777em; /* 14px @ 18px */
+  }
+
+  .ui {
+    margin-left: 3em;
   }
 
   .summary {
