--- a/css/screen.css
+++ b/css/screen.css
@@ -76,7 +76,7 @@ video {
 }
 
 header {
-  background: url(../img/headerphoto1-3284-30.jpg) #262526;
+  background: url(../img/headerphoto1-3284-30.jpg) #49311c;
   background-size: cover;
   background-repeat: no-repeat;
   text-align: left;
