--- a/css/screen.css
+++ b/css/screen.css
@@ -438,5 +438,36 @@ header li:last-child {
   footer {
     text-align: center;
   }
+  
+  @media screen and (min-width: 85em) {
+  main {
+    margin: 1.222em 21em;
+  }
+  
+  @media screen and (min-width: 120em) {
+  main {
+    margin: 1.222em 14em;
+  }
+
+  h1 {
+    font-size: 2.444em; /*44px/18px */
+  }
+
+  #navbar ul li {
+    font-size: 0.777em; /* 14px @ 18px */
+  }
+
+  .summary {
+    font-size: 1.222em;
+    margin-bottom: -0.3055em;;
+  }
+
+  #school {
+    font-size: 1.222em;
+  }
+
+  footer {
+    text-align: center;
+  }
 }
 
