--- a/css/screen.css
+++ b/css/screen.css
@@ -103,7 +103,8 @@ footer {
   color: #7f7f7f;
   font-size: 0.666em;
   margin-bottom: -12.22%;
-  margin-left: -6.61%;
+  margin-left: -1.322em;
+  margin-right: -1.322em;
 }
 
 /* ===== LAYOUT STYLES ===== */
